# LearnOpenGL

./: CMakeLists.txt  Generate.bat  build.bat
include/glad/: glad.h
libs/: glfw3.lib
src/: glad.c  main.cpp
